force-app/main/default/objects/pse__Timecard__c/fields/CT_Include_in_Totals__c.field-meta.xml
<CustomField>
    <fullName>CT_Include_in_Totals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include in Totals</label>
    <type>Checkbox</type>
</CustomField>