force-app/main/default/objects/pse__Timecard__c/fields/CT_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>CT_Total_Amount__c</fullName>
    <formula>pse__Total_Hours__c * CT_Suggested_Bill_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>