force-app/main/default/objects/pse__Timecard__c/fields/ffrrBillRate__c.field-meta.xml
<CustomField>
    <fullName>ffrrBillRate__c</fullName>
    <formula>pse__Timecard_Header__r.pse__Bill_Rate__c</formula>
    <label>Bill Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>