force-app/main/default/objects/pse__Timecard__c/fields/ffrrtemplate__c.field-meta.xml
<CustomField>
    <fullName>ffrrtemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Actuals Template</label>
    <referenceTo>ffrr__Template__c</referenceTo>
    <relationshipLabel>Timecard Splits</relationshipLabel>
    <relationshipName>TimecardSplits</relationshipName>
    <type>Lookup</type>
</CustomField>