force-app/main/default/objects/pse__Timecard__c/listViews/pse__All.listView-meta.xml
<ListView>
    <fullName>pse__All</fullName>
    <columns>NAME</columns>
    <columns>pse__Resource__c</columns>
    <columns>pse__Project__c</columns>
    <columns>pse__Assignment__c</columns>
    <columns>pse__Timecard_Header__c</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__End_Date__c</columns>
    <columns>pse__Total_Hours__c</columns>
    <columns>pse__Billable__c</columns>
    <columns>pse__Total_Cost__c</columns>
    <columns>CT_Suggested_Bill_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>